--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive: ^2.2.3
   auto_route: ^10.2.0
   persistent_bottom_nav_bar: ^6.2.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
