--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   auto_route: ^10.2.0
   persistent_bottom_nav_bar: ^6.2.1
   hive_flutter: ^1.1.0
+  uuid: ^4.5.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
