--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.2.0
   device_info_plus: ^12.2.0
   equatable: ^2.0.7
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
