--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   device_info_plus: ^12.2.0
   equatable: ^2.0.7
   confetti: ^0.8.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
